# IjkplayerDebug

./: README.md
IjkPlayerDebug/app/: .gitignore  CMakeLists.txt  build.gradle
IjkPlayerDebug/app/release/: output.json
IjkPlayerDebug/app/src/assets/: hwdebug.c  hwdebug.h
IjkPlayerDebug/app/src/main/: AndroidManifest.xml
IjkPlayerDebug/app/src/main/cpp/CL/: cl_d3d10.h  cl_dx9_media_sharing.h  cl_ext.h
IjkPlayerDebug/app/src/main/cpp/compat/cuda/: dynlink_nvcuvid.h
IjkPlayerDebug/app/src/main/cpp/event/: EventBus.cpp  EventBus.hpp  MediaEvent.hpp
IjkPlayerDebug/app/src/main/cpp/ffmpeg/: cmdutils.h  config.h  ffmpeg_dxva2.c
IjkPlayerDebug/app/src/main/cpp/ffmpeg/libavutil/: opencl.h  timer.h
IjkPlayerDebug/app/src/main/cpp/ijkplayer/: ff_ffinc.h  ff_ffmsg.h  ff_ffmsg_queue.h  ff_ffpipeline.h  ff_ffpipenode.h  ff_ffplay.c  ff_ffplay_def.h  ijkmeta.c  ijkplayer.c  ijkplayer_internal.h  ijkversion.h  ksdebug.h
IjkPlayerDebug/app/src/main/cpp/ijkplayer/android/: ffmpeg_api_jni.c  ijkplayer_android.c  ijkplayer_android_def.h  ijkplayer_jni.c
IjkPlayerDebug/app/src/main/cpp/ijkplayer/fdk-aac/: FDK_audio.h  aacdecoder_lib.h  genericStds.h  machine_type.h
IjkPlayerDebug/app/src/main/cpp/ijkplayer/ijkavformat/: ijkio.c  ijkioandroidio.c  ijkioapplication.h  ijkiocache.c  ijkioffio.c  ijkiomanager.c  ijkiourl.h  ijkiourlhook.c  ijklivehook.c  ijkmediadatasource.c
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libavcodec/: 012v.c  4xm.c  aac_adtstoasc_bsf.c  aac_defines.h  aacdec.c  aacdec_fixed.c  aacdec_template.c  aacenc.c  aacps.c  aacpsdata.c  aacpsdsp_template.c  aacsbr_template.c  aasc.c  ac3.h  ac3dec.c  ac3dec.h  ac3dec_fixed.c  ac3dec_float.c  ac3enc_fixed.c  ac3enc_float.c  ac3enc_opts_template.c  ac3enc_template.c  acelp_filters.c  adpcm.c  adpcmenc.c  adxdec.c  adxenc.c  alac.c  alacenc.c  aliaspixdec.c  aliaspixenc.c  allcodecs.c  alsdec.c  amfenc.c  amfenc.h  amfenc_h264.c  amfenc_hevc.c  amrnbdec.c  amrwbdec.c  anm.c  (+459 more)
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libavdevice/: android_camera.c  avfoundation.m  libndi_newtek_dec.c  oss.c  oss.h  oss_dec.c  oss_enc.c  v4l2enc.c
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libavfilter/: af_afftfilt.c  af_afir.c  af_afir.h  af_atempo.c  af_bs2b.c  af_firequalizer.c  af_headphone.c  af_ladspa.c  af_loudnorm.c  af_lv2.c  af_rubberband.c  af_sofalizer.c  allfilters.c  asrc_flite.c  avf_showcqt.c  avf_showcqt.h  avf_showfreqs.c  avf_showspectrum.c  bs2b.h  colorspacedsp.c  colorspacedsp_template.c  colorspacedsp_yuv2yuv_template.c  deshake_opencl.c  drawutils.c  f_zmq.c  filter_list.c  internal.h  qsvvpp.h  unsharp_opencl.c  vaapi_vpp.h  vaf_spectrumsynth.c  vf_convolve.c  vf_drawtext.c  vf_fftdnoiz.c  vf_mcdeint.c  vf_misc_vaapi.c  vf_ocr.c  vf_procamp_vaapi.c  vf_scale_cuda.c  vf_scale_npp.c  (+5 more)
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libavformat/: 3dostr.c  4xm.c  a64.c  aacdec.c  aadec.c  acm.c  adp.c  ads.c  adtsenc.c  adxdec.c  aea.c  afc.c  aiffdec.c  aiffenc.c  aixdec.c  allformats.c  anm.c  apc.c  ape.c  apngdec.c  apngenc.c  aqtitledec.c  assdec.c  assenc.c  astdec.c  astenc.c  avr.c  avs.c  bethsoftvid.c  bfi.c  bink.c  bluray.c  bmv.c  boadec.c  brstm.c  c93.c  cafdec.c  cafenc.c  cavsvideodec.c  cdg.c  (+248 more)
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libavresample/: audio_convert.c  audio_convert.h  audio_data.c  audio_data.h  audio_mix.c  audio_mix.h  avresampleres.rc  dither.c  dither.h  internal.h  resample.c  resample.h  resample_template.c  utils.c
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libavutil/: buffer.c  frame.c  hwcontext_cuda.c  hwcontext_cuda.h  hwcontext_cuda_internal.h  hwcontext_d3d11va.c  hwcontext_drm.c  hwcontext_dxva2.c  hwcontext_opencl.h  hwcontext_qsv.c  hwcontext_vaapi.c  hwcontext_vaapi.h  hwcontext_vdpau.c  hwcontext_videotoolbox.c  libavutil.pc  libavutil.so.55  md5.c  mem.c  opencl.h  slicethread.c
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libswresample/: audioconvert.c  audioconvert.h  dither_template.c  libswresample.pc  libswresample.so.2  noise_shaping_data.c  rematrix.c  rematrix_template.c  resample.c  resample_dsp.c  resample_template.c  soxr_resample.c  swresample.c  swresample_internal.h
IjkPlayerDebug/app/src/main/cpp/ijkplayer/libswscale/: bayer_template.c  libswscale.pc  libswscale.so.4  rgb2rgb_template.c  swscale.c  swscale_unscaled.c  utils.c
IjkPlayerDebug/app/src/main/cpp/ijksdl/: ijksdl_log.h
IjkPlayerDebug/app/src/main/cpp/ijksoundtouch/: ijksoundtouch_wrap.cpp
IjkPlayerDebug/app/src/main/cpp/media/: AVData.cpp  AVData.h  AVParameters.cpp  AVParameters.h  IObserver.cpp  IObserver.h  MetaData.cpp  MetaData.h  NativeThread.cpp  NativeThread.h  VideoCompressComponent.cpp  VideoCompressComponent.h  global_header.h  threadsafe_queue.cpp  video.c  videocompress_jni.cpp
IjkPlayerDebug/app/src/main/cpp/media/audio/: FFmpegAudioResample.cpp  FFmpegAudioResample.h  IAudioPlay.cpp  IAudioPlay.h  IAudioResample.cpp  IAudioResample.h
IjkPlayerDebug/app/src/main/cpp/media/decode/: FFmpegDecode.cpp  FFmpegDecode.h  IFFmpegDecode.cpp  IFFmpegDecode.h
IjkPlayerDebug/app/src/main/cpp/media/demux/: FFmpegDemux.cpp  FFmpegDemux.h  IDemux.cpp  IDemux.h
IjkPlayerDebug/app/src/main/cpp/media/encode/: AudioEncodeArgs.h  AudioEncoder.cpp  AudioEncoder.h  MediaEncoder.cpp  MediaEncoder.h  VideoEncoder.cpp  VideoEncoder.h
IjkPlayerDebug/app/src/main/cpp/media/streamer/: FileStreamer.cpp  FileStreamer.h  RtmpStreamer.cpp  RtmpStreamer.h
IjkPlayerDebug/app/src/main/cpp/openssl/: e_os.h  opensslconf.h
IjkPlayerDebug/app/src/main/cpp/openssl/crypto/: ebcdic.c  ppccap.c  sparcv9cap.c
IjkPlayerDebug/app/src/main/cpp/openssl/fuzz/: asn1.c  asn1parse.c  bignum.c  bndiv.c  client.c  cms.c  conf.c  crl.c  ct.c  driver.c  rand.inc  server.c  x509.c  (+1 more)
IjkPlayerDebug/app/src/main/cpp/test/: test.c  test.h
IjkPlayerDebug/app/src/main/java/com/: MainActivity.java
IjkPlayerDebug/app/src/main/res/layout/: activity_main.xml  activity_player.xml
IjkPlayerDebug/app/src/main/res/menu/: menu_app.xml  menu_player.xml
IjkPlayerDebug/app/src/main/res/values/: strings.xml  styles.xml
(+157 files in other folders)
